# rust-chat-server

./: Cargo.toml  LICENSE  README.md
examples/: redis_client.rs  ws_client.rs
src/: error.rs  main.rs  protocol.rs  session.rs
static/: chat.html
