[package]
name = "rust-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fred = { version = "5.1", features = ["subscriber-client"] }
bson = "2"
thiserror = "1.0.32"
serde = "1"
serde_json = "1"
chrono = "0.4"
num_enum = "0.5.7"
serde_repr = "0.1"